--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "js-ui": "link:.."
+    "js-ui-clevai": "link:.."
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
